--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "name": "github-magnifier",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "@rails/webpacker": "https://github.com/rails/webpacker",
+    "add": "^2.0.6",
+    "apollo-boost": "^0.1.16",
+    "graphql": "^14.0.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-apollo": "^2.2.4",
+    "react-dom": "^16.5.2",
+    "react_ujs": "^2.4.4",
+    "tailwindcss": "^0.6.6",
+    "yarn": "^1.10.1"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/oddballio/magnifier.git",
+  "author": "Rob Wilkinson <wilkinson.robert.a@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.9"
+  }
 }
