--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,17 @@
 /yarn-error.log
 
 .byebug_history
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
+
+# Ignore encrypted secrets key file.
+config/secrets.yml.key
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
 
 # ignore RSpec performance examples
 spec/examples.txt
