--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "tailwindcss": "^0.6.6",
     "yarn": "^1.10.1"
   },
+  "scripts": {
+    "eslint:fix": "eslint --fix app/javascript --ignore-pattern tailwind.js",
+    "eslint": "eslint app/javascript --ignore-pattern tailwind.js"
+  },
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/oddballio/magnifier.git",
   "author": "Rob Wilkinson <wilkinson.robert.a@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "prettier": "^1.14.3",
     "webpack-dev-server": "^3.1.9"
   }
 }
