--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,11 @@ Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - 'db/schema.rb'
 
+Style/Documentation:
+  Exclude:
+    - 'config/**/*'
+    - 'db/migrate/*'
+
 # Cop supports --auto-correct.
 Style/ExpandPathArguments:
   Exclude:
