--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,14 @@
-inherit_from: .rubocop_todo.yml
-
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: empty_lines, no_empty_lines
 Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - 'db/schema.rb'
+
+Style/Documentation:
+  Exclude:
+    - 'config/**/*'
+    - 'db/migrate/*'
 
 # Cop supports --auto-correct.
 Style/ExpandPathArguments:
