--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react_ujs": "^2.4.4",
     "tailwindcss": "^0.6.6",
     "yarn": "^1.10.1"
