--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,6 +48,8 @@ Style/FrozenStringLiteralComment:
 Metrics/BlockLength:
   Exclude:
     - 'db/schema.rb'
+    - spec/graphql/**/*
+    - spec/requests/**/*
 
 Style/NumericLiterals:
   Exclude:
