--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,18 @@ jobs:
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.5.1-node-browsers
-      
+        environment:
+          RAILS_ENV: test
+          PGHOST: localhost
+          PGUSER: magnifier
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
        - image: circleci/postgres:9.4
-
+        environment:
+          POSTGRES_USER: magnifier
+          POSTGRES_DB: github-magnifier_test 
+          POSTGRES_PASSWORD: ""
     working_directory: ~/repo
 
     steps:
