--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,16 +6,12 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-       - image: circleci/ruby:2.5.1-node-browsers
+      - image: circleci/ruby:2.5.1-node-browsers
         environment:
           RAILS_ENV: test
           PGHOST: localhost
           PGUSER: magnifier
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-       - image: circleci/postgres:9.4
+      - image: postgres:9.5
         environment:
           POSTGRES_USER: magnifier
           POSTGRES_DB: github-magnifier_test 
@@ -44,6 +40,8 @@ jobs:
             - ./node_modules
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}-{{ checksum "yarn.lock" }}
         
+      # Wait for DB to be available
+      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
       # Database setup
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
