RuboCop fixes, post-rebase

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,8 +22,7 @@ Style/ExpandPathArguments:
 
 Style/MixinUsage:
   Exclude:
-    - 'bin/setup'
-    - 'bin/update'
+    - bin/**/*
 
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, ConsistentQuotesInMultiline.
