--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,8 +22,7 @@ Style/ExpandPathArguments:
 
 Style/MixinUsage:
   Exclude:
-    - 'bin/setup'
-    - 'bin/update'
+    - bin/**/*
 
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, ConsistentQuotesInMultiline.
@@ -48,8 +47,7 @@ Style/FrozenStringLiteralComment:
 Metrics/BlockLength:
   Exclude:
     - 'db/schema.rb'
-    - spec/graphql/**/*
-    - spec/requests/**/*
+    - spec/**/*
 
 Style/NumericLiterals:
   Exclude:
