Rake task for fetching and saving GitHub issue/pr data

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,6 +49,7 @@ Metrics/BlockLength:
   Exclude:
     - 'db/schema.rb'
     - spec/**/*
+    - lib/tasks/**/*
 
 Style/NumericLiterals:
   Exclude:
