--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,8 @@ jobs:
           destination: test-results
 
       - setup_remote_docker:
-          docker_layer_caching: false
-      - run: docker build --build-arg	RAILS_MASTER_KEY=$RAILS_MASTER_KEY -t oddball/magnifier:$CIRCLE_BRANCH  .
+          docker_layer_caching: true
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker build --build-arg	RAILS_MASTER_KEY=$RAILS_MASTER_KEY -t robawilkinson/magnifier:$CIRCLE_BRANCH  .
+      - run: docker push robawilkinson/magnifier:$CIRCLE_BRANCH
 
