--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-apollo": "^2.3.2",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react_ujs": "^2.4.4",
