--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react_ujs": "^2.4.4",
+    "sweetalert2": "^7.33.1",
     "tailwindcss": "^0.6.6",
     "yarn": "^1.10.1"
   },
