Mutation to deal w/adding requested statistic to their week in review
- BE mutation that takes in the FE mutation request
- first checks if the Statistic issue/PR already exists in our db
- else, fetch from GitHub and persist to db
- create appropriate Accomplishment records
- custom error handling

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,6 +39,7 @@ Metrics/LineLength:
   - 'db/schema.rb'
   - spec/rails_helper.rb
   - 'spec/factories/*'
+  - app/graphql/mutations/accomplishments/mutation_manifest.rb
 
 Style/FrozenStringLiteralComment:
   Enabled: false
