--- a/config/database.yml
+++ b/config/database.yml
@@ -16,4 +16,8 @@ test:
 
 production:
   <<: *default
+  host: <%= ENV.fetch("DATABASE_HOST") %>
+  user: <%= ENV.fetch("DATABASE_USER") %>
+  port: <%= ENV.fetch("DATABASE_PORT") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
   database: magnifier_production
