use env vars in test as well

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
-  username: postgres
-  password:
+  host: <%= ENV.fetch("DATABASE_HOST") %>
+  username: <%= ENV.fetch("DATABASE_USER") %>
+  port: 5432
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -16,8 +17,4 @@ test:
 
 production:
   <<: *default
-  host: <%= ENV.fetch("DATABASE_HOST") %>
-  user: <%= ENV.fetch("DATABASE_USER") %>
-  port: 5432
-  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
   database: magnifier_production
