--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,15 @@ jobs:
           RAILS_ENV: test
           PGHOST: localhost
           PGUSER: magnifier
+          DATABASE_HOST: localhost
+          DATABASE_USER: postgres
+          DATABASE_PASSWORD: newpass
       - image: postgres:9.5
         name: db
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: github-magnifier_test 
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: newpass
     working_directory: ~/repo
 
     steps:
@@ -71,16 +74,16 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.1-node-browsers
         environment:
-          RAILS_ENV: test
-          PGHOST: localhost
-          PGUSER: magnifier
-          PGPASS: newpass
+          RAILS_ENV: production
+          DATABASE_HOST: localhost
+          DATABASE_USER: postgres
+          DATABASE_PASSWORD: newpass
       - image: postgres:9.5
         name: db
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: github-magnifier_test 
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: newpass
     working_directory: ~/repo
 
     steps:
