--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: unicode
   port: 5432
   host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
-  username: <%= ENV.fetch("DATABASE_USER", ENV.fetch("USER")) %>
+  username: <%= ENV.fetch("DATABASE_USER", "") %>
   password: <%= ENV.fetch("DATABASE_PASSWORD", "") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
