--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,5 @@ services:
       DATABASE_USER: postgres
       DATABASE_PORT: 5432
       DATABASE_PASSWORD: newpass
+      RAILS_ENV: development
+      RACK_ENV: development
