--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,5 @@ services:
       DATABASE_PASSWORD: newpass
       RAILS_ENV: development
       RACK_ENV: development
+    volumes:
+      - ./:/home/magnifier/src
