--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "add": "^2.0.6",
     "apollo-boost": "^0.1.22",
     "graphql": "^14.0.2",
+    "js-yaml": "^3.13.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
