--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "js-yaml": "^3.13.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
+    "querystringify": "^2.1.1",
     "react": "^16.5.2",
     "react-apollo": "^2.3.2",
     "react-datepicker": "^2.0.0",
